# ccsds-data-messages

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  DOCS.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  conf.py  design.md  disclaimer.md  index.md  installation.md
docs/_static/: custom.css
docs/api/: backends.md  factories.md  models.md  reader-writer.md  views.md
docs/internals/: detection.md  io-adapters.md  parsers.md  registry.md
docs/user-guide/: compute.md  formats.md  installation.md  reading-and-writing.md
orbit_data_messages/: __init__.py
orbit_data_messages/compute/: __init__.py  factories.py  registry.py  views.py
orbit_data_messages/compute/backends/: __init__.py  base.py  numpy_.py  ostk_.py  pure.py
orbit_data_messages/core/: __init__.py  metadata.py  ocm.py  oem.py  omm.py  opm.py  types.py  utilities.py  values.py
orbit_data_messages/io/: __init__.py  _utils.py  detection.py  format.py  options.py  ports.py  reader.py  registry.py  writer.py
orbit_data_messages/io/kvn/: __init__.py  _utils.py  ocm_reader.py  ocm_writer.py  oem_reader.py  oem_writer.py  omm_reader.py  omm_writer.py  opm_reader.py  opm_writer.py  parser.py
orbit_data_messages/io/xml/: __init__.py  _utils.py  ocm_reader.py  ocm_writer.py  oem_reader.py  oem_writer.py  omm_reader.py  omm_writer.py  opm_reader.py  opm_writer.py  parser.py
orbit_data_messages/models/: __init__.py  _epoch.py  base.py  metadata.py  ocm.py  oem.py  omm.py  opm.py  values.py
scripts/: oem_to_ocm.py
src/ccsds_data_messages/: __init__.py  exceptions.py  values.py
src/ccsds_data_messages/io/: __init__.py  _ocm_maneuver.py  _utils.py  detection.py  format.py  options.py  ports.py  reader.py  registry.py  writer.py
src/ccsds_data_messages/io/kvn/: _utils.py  ocm_reader.py  ocm_writer.py  oem_reader.py  oem_writer.py  omm_reader.py  omm_writer.py  opm_reader.py  opm_writer.py  parser.py
src/ccsds_data_messages/io/xml/: _utils.py  ocm_reader.py  ocm_writer.py  oem_reader.py  oem_writer.py  omm_reader.py  omm_writer.py  opm_reader.py  opm_writer.py  parser.py
src/ccsds_data_messages/models/: __init__.py  _aliases.py  _base.py  _epoch.py  _fields.py  _tle_codec.py  _validators.py  conversions.py  message.py  ocm.py  oem.py  omm.py  opm.py  tle.py  values.py
tests/: conftest.py  test_api.py  test_conversions.py  test_detection.py  test_epoch.py  test_header.py  test_hypothesis.py  test_io_utils.py  test_kvn_parser.py  test_message.py  test_ocm.py  test_oem.py  test_omm.py  test_opm.py  test_registry.py  test_spec_conformance.py  test_values.py  test_writer_options.py
tests/fixtures/: ndm_g21_combined_omm.xml  ndm_g22_combined_all.xml  ocm_g15_minimal.kvn  ocm_g16_characteristics.kvn  ocm_g17_deployments.kvn  ocm_g18_multi_traj.kvn  ocm_g19_covariance_histories.kvn  ocm_g20.xml  oem_g11.kvn  oem_g12_accelerations.kvn  oem_g13_covariance.kvn  oem_g14.xml  omm_celestrak_iss_25544.kvn  omm_g10.xml  omm_g7.kvn  omm_g8_covariance.kvn  omm_g9_units.kvn  opm_g1_simple.kvn  opm_g2_maneuvers.kvn  opm_g3_covariance.kvn  opm_g4_keplerian_covariance.kvn  opm_g5.xml  tle_celestrak_iss_25544.txt
tests/integration/: test_header.py  test_hypothesis.py  test_roundtrip_ocm.py  test_roundtrip_oem.py  test_roundtrip_omm.py  test_roundtrip_opm.py  test_spec_conformance.py
tests/io/: test_detection.py  test_io_utils.py  test_reader.py  test_registry.py  test_writer.py  test_writer_options.py
tests/io/kvn/: test_ocm_reader.py  test_ocm_writer.py  test_oem_reader.py  test_oem_writer.py  test_omm_reader.py  test_omm_writer.py  test_opm_reader.py  test_opm_writer.py  test_parser.py
tests/io/xml/: test_ocm_reader.py  test_ocm_writer.py  test_oem_reader.py  test_oem_writer.py  test_omm_reader.py  test_omm_writer.py  test_opm_reader.py  test_opm_writer.py  test_parser.py
tests/models/: test_conversions.py  test_epoch.py  test_ocm.py  test_oem.py  test_omm.py  test_opm.py  test_tle.py
